tests/ui/feature-gates/feature-gate-return_type_notation.cfg.stderr
error[E0658]: return type notation is experimental
  --> $DIR/feature-gate-return_type_notation.rs:12:18
   |
LL | fn foo<T: Trait<m(..): Send>>() {}
   |                  ^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = help: add `#![feature(return_type_notation)]` to the crate attributes to enable

warning: the feature `async_fn_in_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/feature-gate-return_type_notation.rs:4:12
   |
LL | #![feature(async_fn_in_trait)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
